--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,13 @@
+header {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
 main {
     width: 80dvw;
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 28dvh;
+    margin-top: 10dvh;
 }
