--- a/src/pages/Home/styles.scss
+++ b/src/pages/Home/styles.scss
@@ -4,6 +4,7 @@
     align-items: center;
     justify-content: center;
     background-color: var(--background);
+    width: 100%;
     
     .title {
         font-size: 3rem;
