--- a/src/components/UrlList/styles.scss
+++ b/src/components/UrlList/styles.scss
@@ -18,7 +18,6 @@
   li {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
     align-items: center;
     padding: 12px 16px;
     color: var(--text);
@@ -47,9 +46,11 @@
 
   .url-text {
     color: var(--text);
-    max-width: 60%;
+    // max-width: 60%;
+    min-width: 0;
     display: flex;
     flex-direction: column;
+    flex: 1 1 auto;
 
     & > span {
       padding: .25rem;
@@ -72,10 +73,12 @@
   }
 
   .url-actions {
+    flex: 0 0 auto;
     display: flex;
     flex-direction: row;
     align-items: center;
     gap: 8px;
+    justify-content: flex-end;
   }
 
   button {
@@ -119,6 +122,5 @@
 
   .url-list .url-actions {
     flex-direction: row;
-    width: 100%;
   }
 }
