--- a/src/components/UrlPreviewModal/styles.scss
+++ b/src/components/UrlPreviewModal/styles.scss
@@ -9,21 +9,19 @@
 }
 
 .preview-modal {
+  display: flex;
+  flex-direction: column;
   background: var(--input-bg);
   color: var(--text);
   padding: 1rem;
   border-radius: 8px;
-  width: 90%;
+  // width: 90%;
   max-width: 700px;
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
 
-  iframe {
-    width: 100%;
-    height: 400px;
-    border: none;
-    margin-top: 1rem;
-    border-radius: 4px;
-    background: white;
+  img {
+    scale: .8;
+    border-radius: 8px;
   }
 
   .modal-actions {
